bizinikiwi/pezframe/support/test/tests/pezpallet_ui/trait_constant_invalid_bound.stderr
error: Invalid usage of `#[pezpallet::constant]`: `Get<T>` trait bound not found
  --> tests/pezpallet_ui/trait_constant_invalid_bound.rs:26:3
   |
26 |         type U;
   |         ^^^^
